# qwench

./: .env.example  .gitignore  CITATION.cff  CLAUDE.md  LICENSE  README.md  SPEC.md  pyproject.toml  requirements.txt
data/: heldout.jsonl  train.jsonl
deploy/: runpod_deploy.sh  runpod_h2h.py  runpod_setup.sh
eval/: __init__.py  gate.py
qwench/: __init__.py  generate.py  grade.py  instructions.py  prompts.py  sdft_loss.py  skills.py  solver.py  tasks.py  world.py
runs/: forgetting-results.md
schemas/: plan.json  scene_state.json  skills.json
scripts/: push-secret.sh
tests/: test_generate.py  test_genutil.py  test_grade.py  test_sdft_loss.py  test_world.py
training/: __init__.py  common.py  forget_h2h.py  forget_sweep.py  forgetting.py  forgetting_premise.py  fullft.py  fullft_sft_entry.py  general_eval.py  genutil.py  publish.py  sdft.py  sft.py
